Build single jar